# newton-evaluation-illustration

./: README.md  eval-newton.ipynb  multi-gpu.ipynb  newton-evaluation.ipynb  pyproject.toml  rudimentary-scaling.ipynb
gpu-experiments/: cuda-test.ipynb  eval-newton.ipynb  eval_newton_gpu.py  utils_base.py  utils_numba.py  utils_numba_cuda.py  utils_numba_par.py
job-scripts/: test_cpu_base.sh  test_cpu_par.sh  test_cpu_par_single_1.sh  test_cpu_par_single_2.sh  test_gpu.sh  test_gpu_splits.sh  test_gpu_splits_rev.sh
results/: cpu-par-timing.txt  cpu-single-timing.txt  cpu-timing.txt  gpu-timing-1714041305.343542-splits-2.txt  gpu-timing-1714043802.890741-splits-2.txt  gpu-timing-1714043924.716717-splits-2.txt  gpu-timing-1714044212.435399-splits-2.txt  gpu-timing-1714044618.140099-splits-1.txt  gpu-timing-degree-10-1714047554.940637.txt  gpu-timing-degree-10-splits-1-1714051943.547826.txt  gpu-timing-degree-10-splits-16-1714055819.308965.txt  gpu-timing-degree-10-splits-2-1714052143.042702.txt  gpu-timing-degree-10-splits-32-1714055784.383062.txt  gpu-timing-degree-10-splits-4-1714053585.294206.txt  gpu-timing-degree-10-splits-8-1714053627.150061.txt  gpu-timing-degree-10-splits-rev-1-1714052486.520979.txt  gpu-timing-degree-15-1714047451.505897.txt  gpu-timing-degree-15-splits-16-1714055935.581949.txt  gpu-timing-degree-15-splits-2-1714052200.775887.txt  gpu-timing-degree-15-splits-32-1714055885.88263.txt  gpu-timing-degree-15-splits-4-1714053745.10528.txt  gpu-timing-degree-15-splits-8-1714053789.183644.txt  gpu-timing-degree-20-1714048300.094862.txt  (+68 more)
(+14 files in other folders)
