[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newton_eval"
version = "0.0.1"
authors = [
  { name="Damar Wicaksono", email="d.wicaksono@hzdr.de" },
]
description = "Various prototypical implementations of polynomial evaluation in Newton form"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/damar-wicaksono/newton-evaluation-illustration"
Issues = "https://github.com/damar-wicaksono/newton-evaluation-illustration/issues"
